# cmake_demo

./: README.md
demo1/: CMakeLists.txt
demo2/: CMakeLists.txt
demo3/: CMakeLists.txt
demo3/math/: CMakeLists.txt
demo4/: CMakeLists.txt  main.c
demo4/math/: CMakeLists.txt
demo5/: CMakeLists.txt  main.c
demo5/math/: CMakeLists.txt
demo6/: CMakeLists.txt  config.h  config.h.in
demo6/math/: CMakeLists.txt
demo7/: CMakeLists.txt  main.c
demo8/: CMakeLists.txt  License.txt  config.h.in
